# Office_Guide

./: .cursorignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml  specify.md
.cursor/rules/: project-foundation.mdc
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/v1/: documents.py  questions.py  router.py
app/core/: __init__.py  enums.py  errors.py
app/db/: __init__.py
app/db/models/: __init__.py  document.py  document_chunk.py  query_log.py  retrieval_eval_log.py
app/pipelines/: __init__.py  placeholder.py
app/schemas/: __init__.py  documents.py  questions.py
app/services/: __init__.py  storage.py
app/services/ingestion/: __init__.py  chunking.py  embedding.py  ocr.py  pdf_extract.py  pipeline.py
app/services/question/: __init__.py  analyze.py  extraction.py  llm_router.py  normalize.py  rules_router.py
docs/: folder.md  graphio_app_constitution.md  graphio_app_plan.md  graphio_app_specify.md  plan-qna.md  plan.md  specify-qna.md  specify.md
tests/: test_chunking.py  test_question_phase3.py
