[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "office-guide"
version = "0.1.0"
description = "회사생활가이드 v1 백엔드"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "openai>=1.59.0",
  "pgvector>=0.3.6",
  "psycopg2-binary>=2.9.10",
  "pydantic-settings>=2.6.0",
  "pymupdf>=1.24.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.36",
  "tiktoken>=0.8.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27.0", "pytest>=8.3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
